--- a/app/src/main/res/layout/row_note.xml
+++ b/app/src/main/res/layout/row_note.xml
@@ -11,6 +11,7 @@
     android:layout_marginEnd="4dp"
     android:layout_marginTop="8dp"
     android:padding="8dp"
+    card_view:cardElevation="8dp"
     >
 
     <RelativeLayout
