--- a/app/src/main/res/layout/activity_note.xml
+++ b/app/src/main/res/layout/activity_note.xml
@@ -34,13 +34,24 @@
             android:textSize="20dp"
             android:layout_below="@id/title_note_et" />
 
+
         <Button
             android:id="@+id/edit_confirm"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignEnd="@id/title_note_et"
+            android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
             android:text="@string/ok"
+            android:background="@color/colorAddNote"
+            />
+
+        <Button
+            android:id="@+id/edit_delete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:text="@string/delete"
             android:background="@color/colorAddNote"
             />
 
