--- a/app/src/main/res/layout/activity_note.xml
+++ b/app/src/main/res/layout/activity_note.xml
@@ -37,21 +37,10 @@
 
         <Button
             android:id="@+id/edit_confirm"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
             android:text="@string/ok"
-            android:background="@color/colorAddNote"
-            />
-
-        <Button
-            android:id="@+id/edit_delete"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true"
-            android:text="@string/delete"
             android:background="@color/colorAddNote"
             />
 
