--- a/app/src/main/res/layout/activity_note.xml
+++ b/app/src/main/res/layout/activity_note.xml
@@ -34,6 +34,13 @@
             android:textSize="20dp"
             android:layout_below="@id/title_note_et" />
 
+        <CheckBox
+            android:id="@+id/check_box_favorite"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/description__note_et"
+            android:text="@string/add_favorite"/>
+
 
         <Button
             android:id="@+id/edit_confirm"
