--- a/app/src/main/res/layout/row_note.xml
+++ b/app/src/main/res/layout/row_note.xml
@@ -33,5 +33,13 @@
             android:textSize="20dp"
             android:layout_below="@id/title_tv" />
 
+        <ImageView
+            android:id="@+id/pin_favorite"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_pin"
+            android:layout_alignParentEnd="true"
+            android:visibility="gone"/>
+
     </RelativeLayout>
 </android.support.v7.widget.CardView>
